bpo-32197: Try to fix a compiler error introduced in bpo-32030.